2008-08-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-10-02
	* remove item-changed listener for 'runNumber' xdaq parameter:
	counters are appropriately reset in the respective state
	transitions.

2008-06-13  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-10-00
	* don't handle restarted EPs, the FUShmReader does the work
	* fix counter nbSentEvents, count events written with
	several formats only once
	* remove nbAcceptedEvents (=nbSentEvents)
	* add nbPendingSMDiscards
	* remove all input* monitorables, rename output* -> *; remove
	ratio.
	

2008-06-02  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-09-08
	* handle restarted EP: if an event has timed-out and the assigned
	process id is assigned to another cell as well, write the event to
	the error stream and discard it.

2008-05-23  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-09-07
	* SMProxy::sendInitMessage() puts the outModId into message header
	* needs EventFilter/Utilities V00-14-09

2008-03-14  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-09-06
	* default broker to use TCS partition-dependent trigger number

2008-03-14  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-09-05
	* timeout when processKiller disabled now generates info message

2008-03-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-09-04
	* do not increment counters within debug messages (reported by
	Kurt)

2008-02-27  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-09-03
	* introduced boolean parameter to switch off process killing
	* set application hyperdaq icon to new location

2008-02-20  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-09-02
	* fix bug spotted by Gerry: doFedIdCheck wouldn't be properly
	propageted to FUResource.

2008-02-13  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-09-01
	* fix bug spotted by Kurt
